--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,58 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins');
-@import "tools/reboot.css";
 @import "tools/variable.css";
-@import "tools/media-query.css";
+@import "tools/reboot.css";
 @import "tools/utility.css";
+@import "tools/media-query.css";
 
+/* ----------------------------------------------- */
+
+/* Nav Start */
+header{
+    box-shadow: 0px 1px 6px #000;
+}
+.nav{
+    display: flex;
+    justify-content: space-between;
+    padding: 1.5rem 0;
+    align-items: center;
+}
+.nav-left{
+    align-items: center;
+}
+.header-list{
+    margin-left: 1.5rem;
+}
+.header-list ul li{
+    list-style-type: none;
+    margin: 0 0.75rem;
+}
+.header-list ul li a{
+    color: var(--disable-color);
+    font-weight: bold;
+    text-decoration: none;
+}
+.header-list ul li a:hover{
+    color: var(--primary-color);
+}
+/* nav End */
+
+/* ----------------------------------------------- */
+
+/* Hero Start */
+
+/* Hero End */
+
+/* ----------------------------------------------- */
+
+/* Main Content Start */
+
+/* Main Content End */
+
+/* ----------------------------------------------- */
+
+/* Footer Start */
+
+
+/* Footer End */
+
+/* ----------------------------------------------- */
