--- a/src/css/tools/reboot.css
+++ b/src/css/tools/reboot.css
@@ -5,6 +5,10 @@
     margin: 0;
     padding: 0;
 }
+.carousel::-webkit-scrollbar {
+    width: 0;
+  }
+
 h1{
     font-size: 72px;
     font-weight: bolder;
