Mengedit body css

--- a/src/css/components/body.css
+++ b/src/css/components/body.css
@@ -1,117 +1,37 @@
+
 .heading {
     padding-top: 40px;
     padding-bottom: 40px;
+    display: flex;
+    justify-content: space-around;
 }
 
-.heading p {
-    float:left; 
+/* .heading p {
     margin-left: 20px;
 }
 .heading a {
-    float:right; 
     margin-right: 200px;
-}
+} */
 
 .main-item {
-    float: left;
+/* float: left; */
     margin: 16px;
 }
 
-.box1 {
+.list-boxs{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: center;
+}
+
+
+.box {
     width: 200px;
     height: 200px;
     background-color: aquamarine;
 }
 
-.box2 {
-    width: 200px;
-    height: 200px;
-    background-color: aquamarine;
-}
-
-.box3 {
-    width: 200px;
-    height: 200px;
-    background-color: aquamarine;
-}
-
-.box4 {
-    width: 200px;
-    height: 200px;
-    background-color: aquamarine;
-}
-
-.box5 {
-    width: 200px;
-    height: 200px;
-    background-color: aquamarine;
-}
-
-.box6 {
-    width: 200px;
-    height: 200px;
-    background-color: aquamarine;
-}
-
-.box7 {
-    width: 200px;
-    height: 200px;
-    background-color: aquamarine;
-}
-
-.box8 {
-    width: 200px;
-    height: 200px;
-    background-color: aquamarine;
-}
-
-.box9 {
-    width: 200px;
-    height: 200px;
-    background-color: aquamarine;
-}
-
-.box10 {
-    width: 200px;
-    height: 200px;
-    background-color: aquamarine;
-}
-
-.box11 {
-    width: 200px;
-    height: 200px;
-    background-color: aquamarine;
-}
-
-.box12 {
-    width: 200px;
-    height: 200px;
-    background-color: aquamarine;
-}
-
-.box13 {
-    width: 200px;
-    height: 200px;
-    background-color: aquamarine;
-}
-
-.box14 {
-    width: 200px;
-    height: 200px;
-    background-color: aquamarine;
-}
-
-.box15 {
-    width: 200px;
-    height: 200px;
-    background-color: aquamarine;
-}
-
-.box16 {
-    width: 200px;
-    height: 200px;
-    background-color: aquamarine;
-}
 
 .heading2 {
     padding-top: 10px;
@@ -120,9 +40,19 @@
 
 .contents {
     padding-top: 10px;
+    position: relative;
 }
 
-.contents p {
-    padding-top: 230px;
-    text-align: 100px;
+.contents .title-list-boxs span {
+    white-space: nowrap;
+    margin-right: 2rem;
+}
+.garis{
+    height: 2px;
+    width: 100%;
+    background-color: aqua;
+}
+.title-list-boxs{
+    display: flex;
+    align-items: center;
 }
