--- a/src/css/components/hero.css
+++ b/src/css/components/hero.css
@@ -2,6 +2,7 @@
     /* margin-top: 4.2rem; */
     height: 90vh;
     max-height: calc(90vh - 4.2rem);
+    margin-bottom: 6.5rem;
 }
 .carousel-wrapper{
     position: relative;
