--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -1,10 +1,10 @@
 header{
     z-index: 10;
-    position: fixed;
-    width: 100%;
+    position: sticky;
+    width: 100vw;
     background: var(--bg-color-blur);
     top: 0;
-    backdrop-filter: blur(30px);
+    backdrop-filter: blur(40px);
 }
 .nav{
     display: flex;
