--- a/src/css/tools/media-query.css
+++ b/src/css/tools/media-query.css
@@ -1,4 +1,3 @@
-
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) { 
     .container{
@@ -10,6 +9,12 @@
 @media (min-width: 768px) { 
     .container{
         max-width: 720px;
+    }
+    .poster-film-mobile{
+        display: none;
+    }
+    .poster-film{
+        display: block;
     }
  }
 
