--- a/src/css/main.css
+++ b/src/css/main.css
@@ -18,6 +18,6 @@
 /* Main Content End */
 /* ----------------------------------------------- */
 /* Footer Start */
-@import "components/footer.css"
+@import "components/footer.css";
 /* Footer End */
 /* ----------------------------------------------- */
