--- a/src/css/tools/media-query.css
+++ b/src/css/tools/media-query.css
@@ -1,27 +1,34 @@
+.content-carousel .poster-film-mobile{
+    display: block;
+}
+.content-carousel .poster-film{
+    display: none;
+}
+
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) { 
     .container{
         max-width: 540px;
     }
- }
+}
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) { 
     .container{
         max-width: 720px;
     }
-    .poster-film-mobile{
-        display: none;
-    }
-    .poster-film{
-        display: block;
-    }
- }
+}
 
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) { 
     .container{
         max-width: 960px;
+    }
+    content-carousel .poster-film-mobile{
+        display: none;
+    }
+    .content-carousel .poster-film{
+        display: block;
     }
  }
 
