--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -9,14 +9,12 @@ header{
 .nav{
     display: flex;
     justify-content: space-between;
-    padding: 1rem 0;
+    padding: 1rem 1rem;
     align-items: center;
-}
-.nav-left{
-    align-items: center;
+    position: relative;
 }
 .header-list{
-    margin-left: 1.5rem;
+    margin-bottom: 1.5rem;
 }
 .header-list ul li{
     list-style-type: none;
@@ -26,6 +24,7 @@ header{
     color: var(--disable-color);
     font-weight: bold;
     text-decoration: none;
+    white-space: nowrap;
 }
 .header-list ul li a.active{
     color: var(--primary-color);
@@ -33,35 +32,46 @@ header{
 .header-list ul li a:hover{
     color: var(--primary-color);
 }
-.nav-right .form-search{
-    border-bottom: solid 1px var(--disable-color);
-    position: relative;
-}
-.nav-right .form-search svg{
-    width: 1.5rem;
-    height: auto;
-    position: absolute;
-    top: 50%;
-    z-index: -1;
-    transform: translateY(-50%);
-}
-.nav-right .form-search input{
-    padding: 0.5rem 1rem 0.5rem 2rem;
+
+button.humberger{
+    height: 2rem;
+    width: 2rem;
     background: transparent;
-    border: 0;
-    cursor: pointer;
+    border: none;
 }
-.nav-right .form-search input:focus{
-    outline-style: none;
+button.humberger:focus + .nav-right,
+button.humberger:focus-within + .nav-right{
+    opacity: 1;
 }
-.nav-right .form-search input:focus, .nav-right .form-search{
-    border-bottom: solid 1px var(--primary-color);
+.nav-right{
+    transition: 0.5s;
+    opacity: 0;
+    position: absolute;
+    z-index: 1;
+    top: 4rem;
+    right: 0;
+    height: 100vh;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
 }
-.search-container {
+.nav-right .wrapper-mobile-nav{
+    height: fit-content;
+    width: 100%;
+    padding: 1rem 2rem 3rem 2rem;
+    background-color: var(--bg-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.nav-right .wrapper-mobile-nav .header-list{
+    display: flex;
+}
+.nav-right .search-container {
     background: #fff;
-    height: 30px;
+    height: max-content;
+    width: fit-content;
     border-radius: 30px;
-    padding: 10px 20px;
+    padding: 0.5rem 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -72,26 +82,22 @@ header{
         inset -4px -4px 6px 0 rgba(255, 255, 255, .2),
         inset 4px 4px 6px 0 rgba(0, 0, 0, .2);
 }
-
-.search-container:hover>.search-input {
-    width: 200px;
-}
-
-.search-container .search-input {
+.nav-right .search-container .search-input {
+    width: 14rem;
+    padding: 0.1rem 0.5rem;
     background: transparent;
     border: none;
     outline: none;
-    width: 0px;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 1rem;
     transition: 0.8s;
-
 }
-
-.search-container .search-btn .fas {
-    color: #5cbdbb;
+.nav-right .search-container .search-btn{
+    display: flex;
+    align-items: center;
 }
-
-.search-container:hover {
-    animation: hoverShake 0.30s linear 3;
+.nav-right .search-container .search-btn svg {
+    width: 1rem;
+    height: auto;
+    color: var(--primary-color);
 }
