--- a/src/css/components/shoulder.css
+++ b/src/css/components/shoulder.css
@@ -1,38 +1,19 @@
 .shoulder{
-   
     width: 100%;
-    display: flex;
+    margin: 7rem 0 3rem 0;
+    display: grid;
+    grid-template-columns: repeat(2, 0.5fr);
+    row-gap: 1rem;
+    grid-auto-flow: row;
+    justify-items: center;
     justify-content: center;
-    margin-bottom: 30px;
 }
-
-.circle{
-    margin: 30px;
-    width: 100px;
-    height: 120px;
-    
-}
- .dalam{
-    width: 80px;
-    height: 80px;
-    border-radius: 100%;
-    display: inline;
-    margin: 30px;
-    
- }
-
-.circle a{
-    display: block;
+.shoulder a{
     display: flex;
-    justify-content: center;
-    margin-top: -20px;
-    text-decoration: none;
-
+    flex-direction: column;
+    align-items: center;
 }
-
-.dalam a:hover{
-    width: 90px;
-    height: 90px;
+.shoulder a img:hover{
+    outline: 3px solid var(--primary-color);
     border-radius: 100%;
-    border: solid;
 }
