--- a/src/css/tools/utility.css
+++ b/src/css/tools/utility.css
@@ -9,3 +9,10 @@
 .inline{
     display: inline-block;
 }
+.title{
+    font-size: 1rem;
+    font-weight: bold;
+    line-height: 32px;
+    letter-spacing: -0.15%;
+    color: var(--primary-color);
+}
