--- a/src/css/components/body.css
+++ b/src/css/components/body.css
@@ -39,10 +39,13 @@
 .card-bg{
     position: absolute;
     z-index: -1;
+    width: 100%;
+        height: 90%;
 }
+
 .card-bg img{
     max-width: 100%;
-    height: auto;
+    height: 100%;
 }
 .card-body{
     opacity: 0;
