--- a/src/css/components/body.css
+++ b/src/css/components/body.css
@@ -40,12 +40,14 @@
     position: absolute;
     z-index: -1;
     width: 100%;
-        height: 90%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
-
 .card-bg img{
     max-width: 100%;
-    height: 100%;
+    height: auto;
 }
 .card-body{
     opacity: 0;
