--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -42,12 +42,15 @@ button.humberger{
 button.humberger:focus + .nav-right,
 button.humberger:focus-within + .nav-right{
     opacity: 1;
+    transform: translateY(0);
+    z-index: 10;
 }
 .nav-right{
-    transition: 0.5s;
+    transform: translateY(calc(-100vh + -4rem));
+    transition: 0.75s;
     opacity: 0;
     position: absolute;
-    z-index: 1;
+    z-index: -9;
     top: 4rem;
     right: 0;
     height: 100vh;
