--- a/src/css/components/hero.css
+++ b/src/css/components/hero.css
@@ -1,12 +1,13 @@
 .hero{
     /* margin-top: 4.2rem; */
     height: 90vh;
-    max-height: calc(90vh - 4.2rem);
+    max-height: calc(90vh - 4.5rem);
     margin-bottom: 6.5rem;
+    position: relative;
 }
 .carousel-wrapper{
     position: relative;
-    padding-top: 90vh;
+    padding-top: 80vh;
     filter: drop-shadow(0 0 10px #0003);
     perspective: 100px;
 }
@@ -124,26 +125,26 @@
     font-weight: bold;
 }
 .carousel-wrapper .carousel .carousel-slide .btn-slide{
-    display: none;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     scroll-snap-align: center;
+    opacity: 0;
 }
 .carousel::before,
 .carousel::after,
 .carousel-prev,
 .carousel-next {
-  position: absolute;
-  top: 50%;
-  width: 5rem;
-  height: 5rem;
-  outline: 0;
-  font-size: 0;
-  border-radius: 50%;
-  transform: translateY(-50%);
+    position: absolute;
+    top: 50%;
+    width: 3rem;
+    height: 3rem;
+    outline: 0;
+    font-size: 0;
+    border-radius: 50%;
+    transform: translateY(-50%);
 }
 .carousel::before,
 .carousel-prev {
