remake footer add icon FB IG Twitter delete link icon more fixing

--- a/src/css/tools/media-query.css
+++ b/src/css/tools/media-query.css
@@ -83,6 +83,17 @@
     button.humberger{
         display: none;
     }
+    .footer-content{
+        flex-direction: row;
+        text-align: start;
+    }
+    .social{
+        margin-top: 0;
+        justify-content: start;
+    }
+    .social ul{
+        justify-content: space-between;
+    }
 }
 
 /* Large devices (desktops, 992px and up) */
