--- a/src/css/components/footer.css
+++ b/src/css/components/footer.css
@@ -1,72 +1,48 @@
 footer{
-    position: relative;
-    margin-top: 5rem;
-    height: fit-content;
+    margin-top: 3rem;
 }
-
-.footer-wrapper{
-    background:#111;
-    height: auto;
-    width :100vw;
-    padding-top: 40px;
-    color : #fff;
+.footer-top{
+    background:transparent;
+    color : var(--primary-color);
+    padding: 3rem 0;
 }
-
-
 .footer-content{
     display: flex;
-    align-items: center;
-    justify-content: center;
     flex-direction: column;
+    justify-content: space-between;
     text-align: center;
 }
-
-.footer-content h3{
-    font-size: 1.8rem;
-    font-weight: 400;
-    text-transform: capitalize;
-    line-height: 3rem;
-
+.footer-top h3{
+    color: #375AD7;
+    }
+.footer-top h3 span{
+    color: #FFE500;
 }
-
-.footer-content p {
-    max-width: 500px;
-    margin:10px auto;
-    line-height: 28px;
-    font-size: 14px;
-
-}
-
 .social{
+    margin-top: 2rem;
     list-style: none;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 1rem 0 3rem 0;
-    
 }
-
-.social li{
-    margin:0 10px;
+.footer-top ul{
+    margin-top: 1em;
+    list-style: none;
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-evenly;
 }
-
-.social a{
-    text-decoration: none;
-    color: #fff;
-
+.footer-top ul li a{
+    color: var(--disable-color);
 }
-
-.social a i {
-    font-size: 1.1rem;
-    transition: color .4s ease;
-}
-
-.social a:hover{
-    color:aqua;
+.footer-top ul li a:hover{
+    color: var(--primary-color);
 }
 
 .footer-bottom{
-    background: #000;
+    background: var(--disable-color);
     width: 100vw;
     padding: 20px 0;
     text-align: center;
@@ -79,7 +55,7 @@ footer{
 }
 
 .footer-bottom span{
+    color: var(--primary-color);
     text-transform: uppercase;
-    opacity: .4;
     font-weight: 200;
 }
