--- a/src/css/tools/reboot.css
+++ b/src/css/tools/reboot.css
@@ -15,18 +15,21 @@ h1{
     font-weight: bolder;
     line-height: 90px;
     letter-spacing: -1.75%;
+    text-transform: capitalize;
 }
 h2{
     font-size: 60px;
     font-weight: bold;
     line-height: 80px;
     letter-spacing: -1.5%;
+    text-transform: capitalize;
 }
 h3{
     font-size: 48px;
     font-weight: bold;
     line-height: 56px;
     letter-spacing: -0.75%;
+    text-transform: capitalize;
 }
 h4{
     font-size: 34px;
@@ -45,6 +48,11 @@ h6{
     font-weight: bold;
     line-height: 32px;
     letter-spacing: -0.15%;
+}
+p{
+    line-height: 28px;
+    font-size: 1rem;
+    font-weight: 400;
 }
 a{
     text-decoration: none;
